<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/btn_classic_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_classic"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_reverse_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_reverse"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_arcade_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_arcade"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_twist_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_twist"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_twist_rev_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_twist_rev"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_twist_arcade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/title_twist_arcade"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/btn_replay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selecotor_arcade_levels"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@null"
                android:src="@drawable/play" />

            <Button
                android:id="@+id/txtReplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingLeft="10dp"
                android:text="@string/title_replay"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>