<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbox_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="30dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:background="@drawable/dialogbox_popup"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp" >

        <Button            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selecotor_arcade_levels"
            android:text="@string/action_settings"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/action_settings"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"            
            android:paddingBottom="10dp"
            android:gravity="center|bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblTogleFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblSound"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/toggleSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sound_button_selector"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblTogleSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblVibrate"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/toggleVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sound_button_selector"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>